Fix profile change when Krita is moved between screens

We cannot use QApplication::desktop()->screenNumber(mainWindow) in
the handler of the screenChanged() signal, because this information
is not yet ready when the signal is delivered.

BUG:474235